crates/codegen/language/tests/src/fail/definitions/duplicate_variant_name/test.stderr
error: A variant with the name 'Variant1' already exists.
  --> src/fail/definitions/duplicate_variant_name/test.rs:19:40
   |
19 |                     EnumVariant(name = Variant1, fields = ())
   |                                        ^^^^^^^^
